--- a/style.css
+++ b/style.css
@@ -211,4 +211,11 @@ main{
     font-weight: 600;
     color: green;
 }
+.rules{
+    width: 100px;
+    height: 25px;
+    background-color: black;
+    color: white;
+    margin-bottom: 4px;
+}
 
