--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 main{
     height: 100vh;
     width: 100%;
-    background-color: red;
+    background-color: #50C878;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,27 +27,42 @@ main{
 }
 .box1{
     justify-content: center;
+    background-color: black;
 }
 .icons{
     height: 250px;
     width: 80%;
-    border: 2px solid black;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction: column;
-}
-.play{
-    height: 50px;
-    width: 200px;
-    border: 2px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    color: white;
+}
+.play{
+    height: 70px;
+    width: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+    border-radius: 100%;
 }
 .icons button{
-    background-color: transparent;
+    background-color: white;
     cursor: pointer;
+}
+.b1,.b2{
+    height: 90px;
+    width: 60%;
+    display: flex;
+    align-items: center;
+    color: black;
+}
+.b1{
+    justify-content: center;
+}
+.b2{
+    justify-content: space-around;
 }
 .box2{
     width: 25%;
@@ -57,6 +72,7 @@ main{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    border-radius: 20px;
 }
 .boxx{
     width: 100%;
